--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>ebuy</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>pom</packaging>
+    <modules>
+        <module>edureka-server</module>
+        <module>user-service</module>
+    </modules>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -20,6 +25,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
